# AntennaSim

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-pages.yml  docker-preflight.yml  docker-publish.yml  pr-title.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: health.py  (+1 more)
backend/src/converters/: maa_export.py  maa_import.py  nec_file.py
backend/src/core/: rate_limiter.py
backend/src/models/: optimization.py  simulation.py
backend/src/simulation/: nec_input.py
deploy/allinone/: nginx.conf  supervisord.conf
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
frontend/public/: manifest.json
frontend/src/api/: nec.ts
frontend/src/engine/: ground.ts  index.ts  matching.ts  types.ts  validation.ts
frontend/src/pages/: AboutPage.tsx  EditorPage.tsx  LearnPage.tsx  SimulatorPage.tsx
frontend/src/stores/: antennaStore.ts  editorStore.ts  simulationStore.ts  uiStore.ts
frontend/src/templates/: delta-loop.ts  dipole.ts  efhw.ts  hex-beam.ts  horizontal-delta-loop.ts  index.ts  inverted-v.ts  j-pole.ts  log-periodic.ts  magnetic-loop.ts  moxon.ts  off-center-fed.ts  quad.ts  slim-jim.ts  types.ts  vertical.ts  yagi.ts
frontend/src/utils/: ham-bands.ts  project-file.ts
scripts/: dev.sh
wasm/: CMakeLists.txt  build.sh
wasm/patches/: README.md  emscripten-compat.patch
(+48 files in other folders)
